added static script

--- a/points/templates/points/detail.html
+++ b/points/templates/points/detail.html
@@ -6,33 +6,13 @@
     </head>
         <body>
             <div id='map' style='width: 800px; height: 300px;'></div>
-            <script>
-                mapboxgl.accessToken = 'pk.eyJ1IjoiZmxhbWUxMXN0IiwiYSI6ImNqN3VibmJtaDRydjIyd21qZDloeDU3MzQifQ.ktuL8tPfBYLGQ3YiJGtHTQ';
-                var map = new mapboxgl.Map({
-                    container: 'map',
-                    style: 'mapbox://styles/mapbox/streets-v9',
-                    center: [30.516253709793087,50.45835782737586],
-                    zoom:5
-                });
-                map.on('load', function () {
-
-                    map.addLayer({
-                        "id": "points",
-                        "type": "symbol",
-                        "source": {"type": "geojson", data: "{{point.coordinate.url}}"},
-                        "layout": {
-                            "icon-image": "triangle-15",
-                            "text-field": "{{point.title}}",
-                            "text-font": ["Open Sans Semibold", "Arial Unicode MS Bold"],
-                            "text-offset": [0, 0.6],
-                            "text-anchor": "top"
-                        }
-                    });
-                });
-            </script>
-            <h1>{{point.title}}</h1>
-            <img src = {{point.photo1.image.url}}>
-            <img src = {{point.photo2.image.url}}>
-            <img src = {{point.photo3.image.url}}>
+                {% load static %}
+            
+                <script src='{% static 'mapbox.js' %}' type="text/javascript" >var geojson = {{point.coordinate.url}};</script>
+                <h1>{{point.title}}</h1>
+                <img src = {{point.photo1.image.url}}>
+                <img src = {{point.photo2.image.url}}>
+                <img src = {{point.photo3.image.url}}>
         </body>
 </html>
+
