--- a/points/templates/points/detail.html
+++ b/points/templates/points/detail.html
@@ -1,18 +1,100 @@
 <html>
     <head>
+        {% load static %}
+
         <title>{{point.title}}</title>
         <script src='https://api.mapbox.com/mapbox-gl-js/v0.40.1/mapbox-gl.js'></script>
         <link href='https://api.mapbox.com/mapbox-gl-js/v0.40.1/mapbox-gl.css' rel='stylesheet' />
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+        <link rel="stylesheet" href='{% static "style.css" %}'/>
     </head>
         <body>
-            <div id='map' style='width: 800px; height: 300px;'></div>
-                {% load static %}
-            
-                <script src='{% static 'mapbox.js' %}' type="text/javascript" >var geojson = {{point.coordinate.url}};</script>
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+              <a class="navbar-brand" href="#">Navbar</a>
+              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item active">
+                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Features</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Pricing</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link disabled" href="#">Disabled</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link p-2" href="https://github.com/flame11st/new_project">GitHub</a>
+                  </li>
+                </ul>
+              </div>
+            </nav>
+
+            <div class="container">
+                <div id='map'>
+                    <script>
+                    geojson = "{{point.coordinate.url}}"
+                    title = "{{point.title}}"
+                    </script>
+                    <script src='{% static "mapbox.js" %}' type="text/javascript" ></script>
+                </div>
+
                 <h1>{{point.title}}</h1>
-                <img src = {{point.photo1.image.url}}>
-                <img src = {{point.photo2.image.url}}>
-                <img src = {{point.photo3.image.url}}>
+
+                <div class="row">
+                    <div class="col-8">
+                        <div id="photo">
+                            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                              <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                  <img class="d-block w-100" src={{point.photo1.image.url}} alt="First slide">
+                                </div>
+                                <div class="carousel-item">
+                                  <img class="d-block w-100" src={{point.photo2.image.url}} alt="Second slide">
+                                </div>
+                                <div class="carousel-item">
+                                  <img class="d-block w-100" src={{point.photo3.image.url}} alt="Third slide">
+                                </div>
+                              </div>
+                              <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Previous</span>
+                              </a>
+                              <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Next</span>
+                              </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        {% if point.facebook %}
+                            <h3>{{point.facebook}}</h3>
+                        {% endif %}
+                        <h3>Важность: {{point.importance}}</h3>
+                        <h3>Тип: {{point.type.title}}</h3>
+                    </div>
+                </div>
+
+                <div id="description">
+                   <p class="text-muted">{{point.description}}</p>
+                </div>
+
+            </div>
+
+            <footer class="footer">
+                <div class="container">
+                    <p>New_project Footer</p>
+                </div>
+            </footer>
         </body>
 </html>
 
