--- a/points/templates/points/detail.html
+++ b/points/templates/points/detail.html
@@ -5,7 +5,7 @@
         <title>{{point.title}}</title>
         <script src='https://api.mapbox.com/mapbox-gl-js/v0.40.1/mapbox-gl.js'></script>
         <link href='https://api.mapbox.com/mapbox-gl-js/v0.40.1/mapbox-gl.css' rel='stylesheet' />
-        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
@@ -13,7 +13,7 @@
     </head>
         <body>
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
-              <a class="navbar-brand" href="#">Navbar</a>
+              <a class="navbar-brand" href="#">TravelTips</a>
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -29,10 +29,7 @@
                     <a class="nav-link" href="#">Pricing</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link disabled" href="#">Disabled</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link p-2" href="https://github.com/flame11st/new_project">GitHub</a>
+                    <a class="nav-link" href="https://github.com/flame11st/new_project">GitHub</a>
                   </li>
                 </ul>
               </div>
@@ -43,12 +40,19 @@
                     <script>
                     geojson = "{{point.coordinate.url}}"
                     title = "{{point.title}}"
+                    coord = {{coord}}
                     </script>
                     <script src='{% static "mapbox.js" %}' type="text/javascript" ></script>
+                    <script>
+
+                    </script>
                 </div>
-
-                <h1>{{point.title}}</h1>
-
+                <div class="container">
+                    <div id='title' class="row">
+                            <h2>{{point.title}}</h2>
+                            <img src={{point.type.icon.url}}>
+                    </div>
+                </div>
                 <div class="row">
                     <div class="col-8">
                         <div id="photo">
@@ -75,26 +79,53 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-4">
+                    <div class="col-2">
+                        <p>Страна:</p>
+                        <p>Город:</p>
+                        <p>Важность:</p>
+
                         {% if point.facebook %}
-                            <h3>{{point.facebook}}</h3>
+                            <p>facebook:</p>
                         {% endif %}
-                        <h3>Важность: {{point.importance}}</h3>
-                        <h3>Тип: {{point.type.title}}</h3>
+
+                        {% if point.trip_advisor %}
+                            <p>TripAdvisor</p>
+                        {% endif %}
+
+                        {% if point.wiki %}
+                            <p>Wikipedia</p>
+                        {% endif %}
+                        <p>Адрес:</p>
+                    </div>
+                    <div class="col-2">
+                        <p>{{point.city.country.title}}</p>
+                        <p>{{point.city.title}}</p>
+                        <p>{{point.importance}}</p>
+
+                        {% if point.facebook %}
+                            <p>{{point.facebook}}</p>
+                        {% endif %}
+
+                        {% if point.trip_advisor %}
+                            <p>{{point.trip_advisor}}</p>
+                        {% endif %}
+
+                        {% if point.wiki %}
+                            <p>{{point.wiki}}</p>
+                        {% endif %}
+                        <p>{{point.adress}}</p>
                     </div>
                 </div>
 
                 <div id="description">
-                   <p class="text-muted">{{point.description}}</p>
+                   <p>{{point.description}}</p>
                 </div>
-
             </div>
-
-            <footer class="footer">
-                <div class="container">
-                    <p>New_project Footer</p>
-                </div>
-            </footer>
         </body>
+        <footer class="footer">
+            <div class="container">
+                <span class="text-muted">New_project footer.</span>
+            </div>
+        </footer>
 </html>
 
