--- a/static/style.css
+++ b/static/style.css
@@ -1,17 +1,43 @@
 #map{
     width: 100%;
     height: 300px;
-    margin: 40px auto;
+    margin: 60px auto;
 }
+
+#mapp{
+    width: 100%;
+    height: 300px;
+    margin: 60px auto;
+}
+
+html {
+  position: relative;
+  min-height: 100%;
+}
+
+body {
+  margin-bottom: 160px;
+}
+
 .footer {
-  margin-top: 40px;
+  position: absolute;
   bottom: 0;
   width: 100%;
-  height: 60px;
-  line-height: 60px; /* Vertically center the text there */
+  height: 80px;
+  line-height: 80px;
   background-color: #f5f5f5;
 }
 
 #description{
-margin: 40px 0;
+    margin: 40px 0;
+    overflow-x:hidden;
+}
+
+#title{
+    margin-bottom: 20px;
+}
+
+#title img{
+    width: 35px;
+    height: 35px;
 }
